# nigma

./: README.md  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/canvas/: nodes.ts  renderer.ts
src/lib/commands/: index.ts
src/lib/components/: Canvas.svelte  InspectorPanel.svelte  LayersPanel.svelte  Toolbar.svelte
src/lib/stores/: document.svelte.ts  history.svelte.ts  selection.svelte.ts  tool.svelte.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
src/routes/editor/: +page.svelte
