[package]
name = "nigma"
version = "0.1.0"
description = "A local-first Figma clone"
authors = ["Arjun Aditya"]
edition = "2021"

[lib]
name = "nigma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zip = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

